--- a/META.yml
+++ b/META.yml
@@ -3,15 +3,16 @@ abstract: 'Pick items from a data set associatively'
 author:
   - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
+  ExtUtils::MakeMaker: '0'
   File::Spec: '0'
-  IO::Handle: '0'
-  IPC::Open3: '0'
-  Module::Build: '0.28'
+  Module::Build: '0.4214'
   Test::Fatal: '0'
   Test::More: '1.001014'
+  perl: v5.16.0
 configure_requires:
-  Module::Build: '0.28'
-dynamic_config: '0'
+  Module::Build: '0.4214'
+  perl: v5.16.0
+dynamic_config: 0
 generated_by: 'Dist::Zilla version 5.037, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
@@ -58,6 +59,8 @@ provides:
   Set::Associate::Utils:
     file: lib/Set/Associate/Utils.pm
     version: '0.003001'
+recommends:
+  Moose: '2.000'
 requires:
   Carp: '0'
   Digest::MD5: '0'
@@ -76,526 +79,3 @@ resources:
   homepage: https://github.com/kentnl/Set-Associate
   repository: https://github.com/kentnl/Set-Associate.git
 version: '0.003001'
-x_BuiltWith:
-  modules:
-    Carp: '1.36'
-    Digest::MD5: '2.54'
-    Digest::SHA1: '2.13'
-    Dist::Zilla::PluginBundle::Author::KENTNL: 1.7.0
-    Dist::Zilla::PluginBundle::Author::KENTNL::Lite: '2.001000'
-    File::Spec: '3.56'
-    IO::Handle: '1.35'
-    IPC::Open3: '1.18'
-    List::Util: '1.42'
-    Module::Build: '0.4214'
-    Moose: '2.1500'
-    MooseX::AttributeShortcuts: '0.028'
-    MooseX::Role::Parameterized: '1.08'
-    Pod::Coverage::TrustPod: '0.100003'
-    Scalar::Util: 1.42_002
-    Test::CPAN::Changes: '0.400002'
-    Test::CPAN::Meta: '0.25'
-    Test::EOL: '1.5'
-    Test::Fatal: '0.014'
-    Test::Kwalitee: '1.22'
-    Test::More: '1.001014'
-    Test::Pod: '1.50'
-    Test::Pod::Coverage: '1.10'
-    bigint: '0.39'
-    strict: '1.09'
-    version: '0.9912'
-    warnings: '1.32'
-  perl:
-    original: v5.22.0
-    qv: 1
-    version:
-      - 5
-      - 22
-      - 0
-  perl-config:
-    gccversion: 4.9.2
-    myarchname: x86_64-linux
-    osname: linux
-  platform: linux
-  uname: 'Linux 4.1.4-gentoo x86_64 GenuineIntel GNU/Linux'
-x_Dist_Zilla:
-  perl:
-    version: '5.022000'
-  plugins:
-    -
-      class: Dist::Zilla::Plugin::Git::NextVersion
-      config:
-        Dist::Zilla::Plugin::Git::NextVersion:
-          first_version: 0.1.0
-          version_by_branch: '0'
-          version_regexp: (?^u:^(.*)-source$)
-        Dist::Zilla::Role::Git::Repo:
-          repo_root: .
-      name: '@Author::KENTNL/Git::NextVersion'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::MetaConfig
-      name: '@Author::KENTNL/MetaConfig'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::GithubMeta
-      name: '@Author::KENTNL/GithubMeta'
-      version: '0.52'
-    -
-      class: Dist::Zilla::Plugin::MetaProvides::Package
-      config:
-        Dist::Zilla::Plugin::MetaProvides::Package:
-          finder_objects:
-            -
-              class: Dist::Zilla::Plugin::FinderCode
-              name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-              version: '5.037'
-        Dist::Zilla::Role::MetaProvider::Provider:
-          inherit_missing: '1'
-          inherit_version: '1'
-          meta_noindex: '1'
-      name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.003001'
-    -
-      class: Dist::Zilla::Plugin::MetaData::BuiltWith
-      config:
-        Dist::Zilla::Plugin::MetaData::BuiltWith:
-          _stash_key: x_BuiltWith
-          external_file_name: misc/built_with.json
-          show_config: '1'
-          show_uname: '1'
-          uname:
-            uname_args:
-              - -s
-              - -o
-              - -r
-              - -m
-              - -i
-            uname_call: uname
-          use_external_file: ~
-      name: '@Author::KENTNL/MetaData::BuiltWith'
-      version: '1.004002'
-    -
-      class: Dist::Zilla::Plugin::Git::GatherDir
-      config:
-        Dist::Zilla::Plugin::GatherDir:
-          exclude_filename: []
-          exclude_match: []
-          follow_symlinks: '0'
-          include_dotfiles: '1'
-          prefix: ''
-          prune_directory: []
-          root: .
-        Dist::Zilla::Plugin::Git::GatherDir:
-          include_untracked: '0'
-      name: '@Author::KENTNL/Git::GatherDir'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::License
-      name: '@Author::KENTNL/License'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::MetaJSON
-      name: '@Author::KENTNL/MetaJSON'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::MetaYAML
-      name: '@Author::KENTNL/MetaYAML'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Manifest
-      name: '@Author::KENTNL/Manifest'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::MetaTests
-      name: '@Author::KENTNL/MetaTests'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::PodCoverageTests
-      name: '@Author::KENTNL/PodCoverageTests'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::PodSyntaxTests
-      name: '@Author::KENTNL/PodSyntaxTests'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::ReportVersions::Tiny
-      name: '@Author::KENTNL/ReportVersions::Tiny'
-      version: '1.12'
-    -
-      class: Dist::Zilla::Plugin::Test::Kwalitee
-      config:
-        Dist::Zilla::Plugin::Test::Kwalitee:
-          filename: xt/release/kwalitee.t
-          skiptest: []
-      name: '@Author::KENTNL/Test::Kwalitee'
-      version: '2.11'
-    -
-      class: Dist::Zilla::Plugin::EOLTests
-      config:
-        Dist::Zilla::Plugin::Test::EOL:
-          filename: xt/release/eol.t
-          finder:
-            - ':InstallModules'
-            - ':ExecFiles'
-            - ':TestFiles'
-          trailing_whitespace: '1'
-      name: '@Author::KENTNL/EOLTests'
-      version: '0.18'
-    -
-      class: Dist::Zilla::Plugin::Test::MinimumVersion
-      name: '@Author::KENTNL/Test::MinimumVersion'
-      version: '2.000006'
-    -
-      class: Dist::Zilla::Plugin::Test::Compile
-      config:
-        Dist::Zilla::Plugin::Test::Compile:
-          bail_out_on_fail: '0'
-          fail_on_warning: author
-          fake_home: '0'
-          filename: t/00-compile.t
-          module_finder:
-            - ':InstallModules'
-          needs_display: '0'
-          phase: test
-          script_finder:
-            - ':ExecFiles'
-          skips: []
-      name: '@Author::KENTNL/Test::Compile'
-      version: '2.053'
-    -
-      class: Dist::Zilla::Plugin::Test::Perl::Critic
-      name: '@Author::KENTNL/Test::Perl::Critic'
-      version: '3.000'
-    -
-      class: Dist::Zilla::Plugin::PruneCruft
-      name: '@Author::KENTNL/PruneCruft'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::ManifestSkip
-      name: '@Author::KENTNL/ManifestSkip'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::PkgVersion
-      name: '@Author::KENTNL/PkgVersion'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::PodWeaver
-      config:
-        Dist::Zilla::Plugin::PodWeaver:
-          finder:
-            - ':InstallModules'
-            - ':ExecFiles'
-          plugins:
-            -
-              class: Pod::Weaver::Plugin::EnsurePod5
-              name: '@CorePrep/EnsurePod5'
-              version: '4.012'
-            -
-              class: Pod::Weaver::Plugin::H1Nester
-              name: '@CorePrep/H1Nester'
-              version: '4.012'
-            -
-              class: Pod::Weaver::Plugin::Encoding
-              name: -Encoding
-              version: '0.03'
-            -
-              class: Pod::Weaver::Section::Name
-              name: Name
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Version
-              name: Version
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Region
-              name: prelude
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Generic
-              name: SYNOPSIS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Generic
-              name: DESCRIPTION
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Generic
-              name: IMPL
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Generic
-              name: OVERVIEW
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: CONSTRUCTOR_ARGUMENTS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: CLASS_METHODS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: METHODS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: ATTRIBUTES
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: AHANDLES
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: PCONSTRUCTOR_ARGUMENTS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: PMETHODS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: PATTRIBUTES
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: PAHANDLES
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: PRIVATE_ATTRIBUTES
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Collect
-              name: PRIVATE_METHODS
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Leftovers
-              name: Leftovers
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Region
-              name: postlude
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Authors
-              name: Authors
-              version: '4.012'
-            -
-              class: Pod::Weaver::Section::Legal
-              name: Legal
-              version: '4.012'
-      name: '@Author::KENTNL/PodWeaver'
-      version: '4.006'
-    -
-      class: Dist::Zilla::Plugin::NextRelease
-      name: '@Author::KENTNL/NextRelease'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::AutoPrereqs
-      name: '@Author::KENTNL/AutoPrereqs'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: develop
-          type: requires
-      name: '@Author::KENTNL/Prereqs/BundleDevelNeeds'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: develop
-          type: recommends
-      name: '@Author::KENTNL/Prereqs/BundleDevelRecommends'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: develop
-          type: suggests
-      name: '@Author::KENTNL/Prereqs/BundleDevelSuggests'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
-      name: '@Author::KENTNL/Author::KENTNL::MinimumPerl'
-      version: 1.7.0
-    -
-      class: Dist::Zilla::Plugin::Author::KENTNL::Prereqs::Latest::Selective
-      name: '@Author::KENTNL/Author::KENTNL::Prereqs::Latest::Selective'
-      version: '1.001000'
-    -
-      class: Dist::Zilla::Plugin::Authority
-      name: '@Author::KENTNL/Authority'
-      version: '1.009'
-    -
-      class: Dist::Zilla::Plugin::ModuleBuild
-      config:
-        Dist::Zilla::Role::TestRunner:
-          default_jobs: '1'
-      name: '@Author::KENTNL/ModuleBuild'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::ReadmeFromPod
-      name: '@Author::KENTNL/ReadmeFromPod'
-      version: '0.32'
-    -
-      class: Dist::Zilla::Plugin::ReadmeAnyFromPod
-      config:
-        Dist::Zilla::Role::FileWatcher:
-          version: '0.006'
-      name: '@Author::KENTNL/ReadmeAnyFromPod'
-      version: '0.150250'
-    -
-      class: Dist::Zilla::Plugin::Test::CPAN::Changes
-      name: '@Author::KENTNL/Test::CPAN::Changes'
-      version: '0.009'
-    -
-      class: Dist::Zilla::Plugin::CheckExtraTests
-      name: '@Author::KENTNL/CheckExtraTests'
-      version: '0.027'
-    -
-      class: Dist::Zilla::Plugin::TestRelease
-      name: '@Author::KENTNL/TestRelease'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::ConfirmRelease
-      name: '@Author::KENTNL/ConfirmRelease'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Git::Check
-      config:
-        Dist::Zilla::Plugin::Git::Check:
-          untracked_files: die
-        Dist::Zilla::Role::Git::DirtyFiles:
-          allow_dirty:
-            - dist.ini
-            - Changes
-          allow_dirty_match: []
-          changelog: Changes
-        Dist::Zilla::Role::Git::Repo:
-          repo_root: .
-      name: '@Author::KENTNL/Git::Check'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::Git::Tag
-      config:
-        Dist::Zilla::Plugin::Git::Tag:
-          branch: ~
-          signed: '0'
-          tag: 0.003001-source
-          tag_format: '%v-source'
-          tag_message: v%v
-          time_zone: local
-        Dist::Zilla::Role::Git::Repo:
-          repo_root: .
-      name: '@Author::KENTNL/Git::Tag/tag_master'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::Git::Commit
-      config:
-        Dist::Zilla::Plugin::Git::Commit:
-          add_files_in: []
-          commit_msg: v%v%n%n%c
-          time_zone: local
-        Dist::Zilla::Role::Git::DirtyFiles:
-          allow_dirty:
-            - dist.ini
-            - Changes
-          allow_dirty_match: []
-          changelog: Changes
-        Dist::Zilla::Role::Git::Repo:
-          repo_root: .
-      name: '@Author::KENTNL/Git::Commit'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::Git::CommitBuild
-      config:
-        Dist::Zilla::Plugin::Git::CommitBuild:
-          branch: build/%b
-          build_root: ~
-          message: 'Build results of %h (on %b)'
-          multiple_inheritance: '0'
-          release_branch: releases
-          release_message: 'Build results of %h (on %b)'
-        Dist::Zilla::Role::Git::Repo:
-          repo_root: .
-      name: '@Author::KENTNL/Git::CommitBuild'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::Git::Tag
-      config:
-        Dist::Zilla::Plugin::Git::Tag:
-          branch: releases
-          signed: '0'
-          tag: '0.003001'
-          tag_format: '%v'
-          tag_message: v%v
-          time_zone: local
-        Dist::Zilla::Role::Git::Repo:
-          repo_root: .
-      name: '@Author::KENTNL/Git::Tag/tag_release'
-      version: '2.035'
-    -
-      class: Dist::Zilla::Plugin::UploadToCPAN
-      name: '@Author::KENTNL/UploadToCPAN'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::Twitter
-      name: '@Author::KENTNL/Twitter'
-      version: '0.026'
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: runtime
-          type: requires
-      name: Prereqs
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':InstallModules'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':IncModules'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':TestFiles'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':ExecFiles'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':ShareFiles'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':MainModule'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':AllFiles'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':NoFiles'
-      version: '5.037'
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-      version: '5.037'
-  zilla:
-    class: Dist::Zilla::Dist::Builder
-    config:
-      is_trial: '0'
-    version: '5.037'
-x_authority: cpan:KENTNL
